--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,20 @@ body{
   background-color:#F4F5F9;
 }
 
+
+
+
+
+/* Navbar.css */
+.navbar {
+  position: sticky; /* Stick to the top */
+  top: 0; /* Position it at the top */
+  background-color: #F4F5F9; /* Background color to cover content underneath */
+  z-index: 1000; /* Ensure it stays on top of other elements */
+  width: 100%; /* Full width of the viewport */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional shadow for better visibility */
+}
+
 .cinzel-decorative-regular {
     font-family: "Cinzel Decorative", serif;
     font-weight: 400;
